added lastCommitTime func